# grip

./: .env.example  .gitignore  README.md  docker-compose.yml  index.html  pyproject.toml
.github/workflows/: deploy.yml  test.yml
api/forecast/: backtest.json  risk.json
api/meta/: data-quality.json  provenance_alliance_alignment_FI.json  provenance_alliance_alignment_LT.json  provenance_comms_logistics_stress_LT.json  provenance_energy_dependence_EE.json  provenance_energy_dependence_LV.json  provenance_geopolitical_tension_LT.json  provenance_geopolitical_tension_LV.json  provenance_infrastructure_vulnerability_FI.json  provenance_infrastructure_vulnerability_LT.json  provenance_sanctions_pressure_LT.json  provenance_strategic_readiness_FI.json  system-status.json
api/scenario/: prebuilt.json  (+2 more)
api/state/: scores.json
assets/: index-BN6uTwyM.js  index-BTgUfuDU.css
backend/: config.py  main.py
config/: domains.json  thresholds.json  topology.json
data/: backtest_results.json
docs/: assumptions-register.md  backtesting-report.md  data-dictionary.md  infrastructure-topology.md  limitations.md  methodology.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
notebooks/: 04_disruption_backtest.ipynb  04_disruption_backtest_executed.ipynb
scripts/: generate_static_api.py
tests/: conftest.py  test_api.py  test_cascade.py  test_escalation.py  test_foundation.py  test_ingestion_entsoe.py  test_ingestion_entsog.py  test_ingestion_runner.py  test_margin.py  test_ml.py  test_scenario.py  test_scoring.py  test_topology.py  test_utils.py
(+104 files in other folders)
